{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 368,
  "lineage": "25e3a5a5-adfb-afba-7b78-5cc895e400bc",
  "resources": [
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:211125434971:internet-gateway/igw-0ff32629bd2cc76ab",
            "id": "igw-0ff32629bd2cc76ab",
            "owner_id": "211125434971",
            "tags": {
              "Name": "internet-gateway"
            },
            "tags_all": {
              "Name": "internet-gateway"
            },
            "vpc_id": "vpc-0723308eb5b2fffdc"
          },
          "dependencies": [
            "module.networking.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "connectivity_type": "private",
            "id": "nat-0a9a1f0394a0cefac",
            "network_interface_id": "eni-0bc3c9c55ca25f9d5",
            "private_ip": "10.0.128.22",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b732eb69272d1edc",
            "tags": {
              "Name": "nat-internet-gateway"
            },
            "tags_all": {
              "Name": "nat-internet-gateway"
            }
          },
          "dependencies": [
            "module.networking.aws_subnet.private_subnets",
            "module.networking.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:211125434971:route-table/rtb-0d7551f8f93dc85cf",
            "id": "rtb-0d7551f8f93dc85cf",
            "owner_id": "211125434971",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0a9a1f0394a0cefac",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-route-table-eu-west-2a-1"
            },
            "tags_all": {
              "Name": "private-route-table-eu-west-2a-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0723308eb5b2fffdc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_nat_gateway.ngw",
            "module.networking.aws_subnet.private_subnets",
            "module.networking.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:211125434971:route-table/rtb-041a25528e38bcfe4",
            "id": "rtb-041a25528e38bcfe4",
            "owner_id": "211125434971",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0a9a1f0394a0cefac",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-route-table-eu-west-2b-2"
            },
            "tags_all": {
              "Name": "private-route-table-eu-west-2b-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0723308eb5b2fffdc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_nat_gateway.ngw",
            "module.networking.aws_subnet.private_subnets",
            "module.networking.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:211125434971:route-table/rtb-0be6fe2682044ed42",
            "id": "rtb-0be6fe2682044ed42",
            "owner_id": "211125434971",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0a9a1f0394a0cefac",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-route-table-eu-west-2c-3"
            },
            "tags_all": {
              "Name": "private-route-table-eu-west-2c-3"
            },
            "timeouts": null,
            "vpc_id": "vpc-0723308eb5b2fffdc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_nat_gateway.ngw",
            "module.networking.aws_subnet.private_subnets",
            "module.networking.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:211125434971:route-table/rtb-0c03520851658abe1",
            "id": "rtb-0c03520851658abe1",
            "owner_id": "211125434971",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ff32629bd2cc76ab",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-route-table"
            },
            "tags_all": {
              "Name": "public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0723308eb5b2fffdc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f79123c9b1e9f7a1",
            "route_table_id": "rtb-0d7551f8f93dc85cf",
            "subnet_id": "subnet-0b732eb69272d1edc"
          },
          "dependencies": [
            "module.networking.aws_nat_gateway.ngw",
            "module.networking.aws_route_table.private-route-table",
            "module.networking.aws_subnet.private_subnets",
            "module.networking.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-086a62e7599bc19ab",
            "route_table_id": "rtb-041a25528e38bcfe4",
            "subnet_id": "subnet-06566df3af96493e5"
          },
          "dependencies": [
            "module.networking.aws_nat_gateway.ngw",
            "module.networking.aws_route_table.private-route-table",
            "module.networking.aws_subnet.private_subnets",
            "module.networking.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f0282ebbfbe3fdd3",
            "route_table_id": "rtb-0be6fe2682044ed42",
            "subnet_id": "subnet-0003942116a32c6fb"
          },
          "dependencies": [
            "module.networking.aws_nat_gateway.ngw",
            "module.networking.aws_route_table.private-route-table",
            "module.networking.aws_subnet.private_subnets",
            "module.networking.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c392ff4cebe8c484",
            "route_table_id": "rtb-0c03520851658abe1",
            "subnet_id": "subnet-0eba7070cf5e41912"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_route_table.public_route_table",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e314ea97ae5d68eb",
            "route_table_id": "rtb-0c03520851658abe1",
            "subnet_id": "subnet-013597cd19d9a1159"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_route_table.public_route_table",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06e4e9a612ba0a63c",
            "route_table_id": "rtb-0c03520851658abe1",
            "subnet_id": "subnet-052514fb6c7d7cd57"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.igw",
            "module.networking.aws_route_table.public_route_table",
            "module.networking.aws_subnet.public_subnets",
            "module.networking.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:211125434971:subnet/subnet-0b732eb69272d1edc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.128.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b732eb69272d1edc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125434971",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-eu-west-2a-1"
            },
            "tags_all": {
              "Name": "private-subnet-eu-west-2a-1"
            },
            "vpc_id": "vpc-0723308eb5b2fffdc"
          },
          "dependencies": [
            "module.networking.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:211125434971:subnet/subnet-06566df3af96493e5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.133.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06566df3af96493e5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125434971",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-eu-west-2b-2"
            },
            "tags_all": {
              "Name": "private-subnet-eu-west-2b-2"
            },
            "vpc_id": "vpc-0723308eb5b2fffdc"
          },
          "dependencies": [
            "module.networking.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:211125434971:subnet/subnet-0003942116a32c6fb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.138.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0003942116a32c6fb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125434971",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "private-subnet-eu-west-2c-3"
            },
            "tags_all": {
              "Name": "private-subnet-eu-west-2c-3"
            },
            "vpc_id": "vpc-0723308eb5b2fffdc"
          },
          "dependencies": [
            "module.networking.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:211125434971:subnet/subnet-0eba7070cf5e41912",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2a",
            "availability_zone_id": "euw2-az2",
            "cidr_block": "10.0.0.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eba7070cf5e41912",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "211125434971",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-eu-west-2a-1"
            },
            "tags_all": {
              "Name": "public-subnet-eu-west-2a-1"
            },
            "vpc_id": "vpc-0723308eb5b2fffdc"
          },
          "dependencies": [
            "module.networking.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:211125434971:subnet/subnet-013597cd19d9a1159",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2b",
            "availability_zone_id": "euw2-az3",
            "cidr_block": "10.0.5.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-013597cd19d9a1159",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "211125434971",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-eu-west-2b-2"
            },
            "tags_all": {
              "Name": "public-subnet-eu-west-2b-2"
            },
            "vpc_id": "vpc-0723308eb5b2fffdc"
          },
          "dependencies": [
            "module.networking.aws_vpc.main_vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:211125434971:subnet/subnet-052514fb6c7d7cd57",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-2c",
            "availability_zone_id": "euw2-az1",
            "cidr_block": "10.0.10.0/26",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-052514fb6c7d7cd57",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "211125434971",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public-subnet-eu-west-2c-3"
            },
            "tags_all": {
              "Name": "public-subnet-eu-west-2c-3"
            },
            "vpc_id": "vpc-0723308eb5b2fffdc"
          },
          "dependencies": [
            "module.networking.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-2:211125434971:vpc/vpc-0723308eb5b2fffdc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0140668ce629ea62b",
            "default_route_table_id": "rtb-0296628b9b92f85a6",
            "default_security_group_id": "sg-0977c93410ed2231d",
            "dhcp_options_id": "dopt-0acda5bd7088a21f3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0723308eb5b2fffdc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0296628b9b92f85a6",
            "owner_id": "211125434971",
            "tags": {
              "Name": "my-new-vpc"
            },
            "tags_all": {
              "Name": "my-new-vpc"
            }
          }
        }
      ]
    }
  ]
}